--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css"/>
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
@@ -42,47 +43,47 @@
           <tr class="time-block current" id="9">
             <th scope="row">9AM</th>
             <td class="task-item"></td>
-            <td class="saveBtn"></td>
+            <td class="saveBtn"><span class="oi oi-lock-locked"></span></td>
           </tr>
           <tr class="time-block current" id="10">
             <th scope="row">10AM</th>
             <td class="task-item"></td>
-            <td class="saveBtn"></td>
+            <td class="saveBtn"><span class="oi oi-lock-locked"></span></td>
           </tr>
           <tr class="time-block current" id="11">
             <th scope="row">11AM</th>
             <td class="task-item"></td>
-            <td class="saveBtn"></td>
+            <td class="saveBtn"><span class="oi oi-lock-locked"></span></td>
           </tr>
           <tr class="time-block current" id="12">
             <th scope="row">12PM</th>
             <td class="task-item"></td>
-            <td class="saveBtn"></td>
+            <td class="saveBtn"><span class="oi oi-lock-locked"></span></td>
           </tr>
           <tr class="time-block current" id="13">
             <th scope="row">1PM</th>
             <td class="task-item"></td>
-            <td class="saveBtn"></td>
+            <td class="saveBtn"><span class="oi oi-lock-locked"></span></td>
           </tr>
           <tr class="time-block current" id="14">
             <th scope="row">2PM</th>
             <td class="task-item"></td>
-            <td class="saveBtn"></td>
+            <td class="saveBtn"><span class="oi oi-lock-locked"></span></td>
           </tr>
           <tr class="time-block current" id="15">
             <th scope="row">3PM</th>
             <td class="task-item"></td>
-            <td class="saveBtn"></td>
+            <td class="saveBtn"><span class="oi oi-lock-locked"></span></td>
           </tr>
           <tr class="time-block current" id="16">
             <th scope="row">4PM</th>
             <td class="task-item"></td>
-            <td class="saveBtn"></td>
+            <td class="saveBtn"><span class="oi oi-lock-locked"></span></td>
           </tr>
           <tr class="time-block current" id="17">
             <th scope="row">5PM</th>
             <td class="task-item"></td>
-            <td class="saveBtn"></td>
+            <td class="saveBtn"><span class="oi oi-lock-locked"></span></td>
           </tr>
         </tbody>
       </table>
