--- a/index.html
+++ b/index.html
@@ -40,47 +40,47 @@
           </tr>
         </thead>
         <tbody>
-          <tr class="time-block current" id="9">
+          <tr class="time-block present" id="9">
             <th scope="row">9AM</th>
             <td class="task-item"></td>
             <td class="saveBtn"><span class="oi oi-lock-locked"></span></td>
           </tr>
-          <tr class="time-block current" id="10">
+          <tr class="time-block present" id="10">
             <th scope="row">10AM</th>
             <td class="task-item"></td>
             <td class="saveBtn"><span class="oi oi-lock-locked"></span></td>
           </tr>
-          <tr class="time-block current" id="11">
+          <tr class="time-block present" id="11">
             <th scope="row">11AM</th>
             <td class="task-item"></td>
             <td class="saveBtn"><span class="oi oi-lock-locked"></span></td>
           </tr>
-          <tr class="time-block current" id="12">
+          <tr class="time-block present" id="12">
             <th scope="row">12PM</th>
             <td class="task-item"></td>
             <td class="saveBtn"><span class="oi oi-lock-locked"></span></td>
           </tr>
-          <tr class="time-block current" id="13">
+          <tr class="time-block present" id="13">
             <th scope="row">1PM</th>
             <td class="task-item"></td>
             <td class="saveBtn"><span class="oi oi-lock-locked"></span></td>
           </tr>
-          <tr class="time-block current" id="14">
+          <tr class="time-block present" id="14">
             <th scope="row">2PM</th>
             <td class="task-item"></td>
             <td class="saveBtn"><span class="oi oi-lock-locked"></span></td>
           </tr>
-          <tr class="time-block current" id="15">
+          <tr class="time-block present" id="15">
             <th scope="row">3PM</th>
             <td class="task-item"></td>
             <td class="saveBtn"><span class="oi oi-lock-locked"></span></td>
           </tr>
-          <tr class="time-block current" id="16">
+          <tr class="time-block present" id="16">
             <th scope="row">4PM</th>
             <td class="task-item"></td>
             <td class="saveBtn"><span class="oi oi-lock-locked"></span></td>
           </tr>
-          <tr class="time-block current" id="17">
+          <tr class="time-block present" id="17">
             <th scope="row">5PM</th>
             <td class="task-item"></td>
             <td class="saveBtn"><span class="oi oi-lock-locked"></span></td>
